; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_cmd.c_mlx4_internal_err_ret_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_cmd.c_mlx4_internal_err_ret_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@CMD_STAT_OK = common dso_local global i32 0, align 4
@CMD_STAT_INTERNAL_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, i32, i32)* @mlx4_internal_err_ret_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx4_internal_err_ret_value(%struct.mlx4_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlx4_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %19 [
    i32 130, label %9
    i32 129, label %9
    i32 131, label %9
    i32 140, label %9
    i32 135, label %9
    i32 136, label %9
    i32 133, label %9
    i32 134, label %9
    i32 139, label %9
    i32 128, label %9
    i32 137, label %9
    i32 138, label %9
    i32 132, label %11
  ]

9:                                                ; preds = %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3, %3
  %10 = load i32, i32* @CMD_STAT_OK, align 4
  store i32 %10, i32* %4, align 4
  br label %22

11:                                               ; preds = %3
  %12 = load i32, i32* %7, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i32, i32* @CMD_STAT_OK, align 4
  store i32 %15, i32* %4, align 4
  br label %22

16:                                               ; preds = %11
  %17 = load i32, i32* @CMD_STAT_INTERNAL_ERR, align 4
  %18 = call i32 @mlx4_status_to_errno(i32 %17)
  store i32 %18, i32* %4, align 4
  br label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @CMD_STAT_INTERNAL_ERR, align 4
  %21 = call i32 @mlx4_status_to_errno(i32 %20)
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %19, %16, %14, %9
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @mlx4_status_to_errno(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
